--- a/if.html
+++ b/if.html
@@ -34,7 +34,7 @@
                 login==''?'로그인이 필요합니다.':
                 '';
         alert(message);
-        
+        // ? :  는 ? 앞의 값이 트루면 ? 뒤의 값 반환 펄스면 : 뒤에 값 반환 
      </script>    
 </body>
 </html>
